--- a/entry/src/main/resources/rawfile/admin/adminUser.html
+++ b/entry/src/main/resources/rawfile/admin/adminUser.html
@@ -61,35 +61,93 @@
             color: #fff;
         }
 
-        /* 固定宽度的列 */
-        th:nth-child(1), td:nth-child(1) { min-width: 50px; } /* ID */
-        th:nth-child(4), td:nth-child(4) { width: 80px; } /* 状态 */
-        th:nth-child(6), td:nth-child(6) { width: 100px; } /* 电话 */
 
-        /* 自适应宽度的列 */
-        th:nth-child(2), td:nth-child(2) { width: auto; } /* 用户名 */
-        th:nth-child(3), td:nth-child(3) { width: auto; } /* 角色 */
-        th:nth-child(5), td:nth-child(5) { width: auto; } /* 邮箱 */
-        th:nth-child(7), td:nth-child(7) { width: auto; } /* 注册时间 */
-        th:nth-child(8), td:nth-child(8) { width: auto; } /* 最后登录 */
+        /* 新建用户弹窗 */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
+        .modal-content {
+            background-color: #fff;
+            margin: 10% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 50%;
+            max-width: 600px;
+            border-radius: 5px;
+        }
+
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .close:hover {
+            color: #000;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+        }
+
+        .form-group input, .form-group select {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+
+        .form-group button {
+            padding: 8px 16px;
+            margin-right: 10px;
+            cursor: pointer;
+        }
+
+        /* 固定宽度的列 */
+        th:nth-child(1), td:nth-child(1) { min-width: 20px; }
+         th:nth-child(2), td:nth-child(2) { min-width: 50px; }
+        th:nth-child(3), td:nth-child(3) { min-width: 70px; }
+        th:nth-child(4), td:nth-child(4) { min-width: 70px; }
+        th:nth-child(5), td:nth-child(5) { min-width: 70px; }
+        th:nth-child(6), td:nth-child(6) { min-width: 70px; }
+        th:nth-child(7), td:nth-child(7) { min-width: 70px; }
+        th:nth-child(8), td:nth-child(8) { min-width: 100px; }
+
+
+
     </style>
 </head>
 <body>
 <h1>用户管理</h1>
 <div class="selected-count">已选择：<span id="selectedCount">0</span> 条
     <button onclick="deleteSelectedUsers()" id="deleteSelectedBtn" disabled>删除选中</button>
+    <button onclick="addUsers()" id="addUserBtn">新建用户</button>
 </div>
 <div class="table-container">
     <table id="userTable">
         <thead>
         <tr>
             <th><input type="checkbox" id="selectAll"></th>
-            <th>ID</th>
+            <th>用户ID</th>
             <th>用户名</th>
-            <th>角色</th>
-            <th>状态</th>
-            <th>邮箱</th>
-            <th>电话</th>
+            <th>用户角色</th>
+            <th>用户状态</th>
+            <th>联系电话</th>
             <th>注册时间</th>
             <th>操作</th>
         </tr>
@@ -103,6 +161,51 @@
     <button onclick="prevPage()">上一页</button>
     <span id="pageInfo"></span>
     <button onclick="nextPage()">下一页</button>
+</div>
+
+<!-- 新建用户模态框 -->
+<div id="addUserModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <h2>新建用户</h2>
+        <form id="addUserForm">
+            <div class="form-group">
+                <label for="userName">用户名:</label>
+                <input type="text" id="userName" name="userName" required>
+            </div>
+            <div class="form-group">
+                <label for="userRole">角色:</label>
+                <select id="userRole" name="userRole" required>
+                    <option value="admin">管理员</option>
+                    <option value="user">普通用户</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="buildingNumber">楼号:</label>
+                <input type="text" id="buildingNumber" name="buildingNumber" required>
+            </div>
+            <div class="form-group">
+                <label for="unitNumber">单元号:</label>
+                <input type="text" id="unitNumber" name="unitNumber" required>
+            </div>
+            <div class="form-group">
+                <label for="floorNumber">楼层:</label>
+                <input type="text" id="floorNumber" name="floorNumber" required>
+            </div>
+            <div class="form-group">
+                <label for="roomNumber">房间号:</label>
+                <input type="text" id="roomNumber" name="roomNumber" required>
+            </div>
+            <div class="form-group">
+                <label for="userPhone">电话:</label>
+                <input type="tel" id="userPhone" name="userPhone" required>
+            </div>
+            <div class="form-group">
+                <button type="submit">确定</button>
+                <button type="button" onclick="closeModal()">取消</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <script src="js/adminUser.js"></script>
@@ -129,7 +232,6 @@
                 <td>${user.userName || user.userAccount}</td>
                 <td>${user.userRole}</td>
                 <td>${user.isDelete === 0 ? '激活' : '禁用'}</td>
-                <td>${user.userEmail || '无'}</td>
                 <td>${user.userPhone}</td>
                 <td>${new Date(user.createTime).toLocaleString()}</td>
                 <td>
@@ -187,49 +289,37 @@
         updateSelectedCount();
     });
 
-    // 删除选中的用户
+    // 批量删除选中的用户
     function deleteSelectedUsers() {
-        if (selectedRows.size === 0) {
-            alert('请选择至少一条记录');
-            return;
-        }
+        const requestData = {
+            ids: selectedRows
+        };
+        userClass.deletesUser(requestData);
+    }
 
-        if (confirm('确定要删除选中的用户吗？')) {
-            // 调用删除接口
-            selectedRows.forEach(id => {
-                deleteUser(id); // 假设 deleteUser 是删除单个用户的函数
-            });
-            // 删除后刷新页面
-            window.location.reload();
-        }
+    // 删除一个用户
+    function deleteUser(id) {
+        // 1895278498285727700
+        console.log("id: "+ id)
+        const requestData = {
+            id: id
+        };
+        // 1895278498285727700
+        console.log("requestData: "+requestData.id)
+        userClass.deleteUser(requestData);
     }
 
     // 修改用户
     function editUser(id) {
-        // 跳转到修改页面或弹出修改对话框
-        console.log('修改用户:', id);
-        // 这里可以根据实际需求实现修改逻辑
-    }
 
-    // 删除用户
-    function deleteUser(id) {
-        if (confirm('确定要删除该用户吗？')) {
-            // 调用删除接口
-            listUserByPage.deleteUser(id).then(() => {
-                // 删除成功后刷新页面
-                window.location.reload();
-            }).catch((error) => {
-                console.error('删除失败:', error);
-            });
-        }
     }
 
     // 初始化
     window.onload = function() {
         let userQueryRequest = {};
-        listUserByPage.listUserByPage(userQueryRequest).then((isUserByPage) => {
+        userClass.listUserByPage(userQueryRequest).then((isUserByPage) => {
             if (isUserByPage) {
-                users = listUserByPage.getPage(); // 获取真实数据
+                users = userClass.getPage(); // 获取真实数据
                 console.log("用户数据：", users);
                 renderTable(); // 渲染表格
             }
@@ -237,6 +327,37 @@
             console.error("Error:", error);
         });
     };
+
+
+    // 打开模态框
+    function addUsers() {
+        document.getElementById('addUserModal').style.display = 'block';
+    }
+
+    // 关闭模态框
+    function closeModal() {
+        document.getElementById('addUserModal').style.display = 'none';
+    }
+
+    // 提交表单
+    document.getElementById('addUserForm').addEventListener('submit', function (event) {
+        event.preventDefault();
+        const buildingNumber = document.getElementById('buildingNumber').value;
+        const unitNumber = document.getElementById('unitNumber').value;
+        const floorNumber = document.getElementById('floorNumber').value;
+        const roomNumber = document.getElementById('roomNumber').value;
+
+        // 组合生成 userAccount
+        const userAccount = `${buildingNumber}-${unitNumber}-${floorNumber}-${roomNumber}`;
+
+        const formData = {
+            userAccount: userAccount,
+            userName: document.getElementById('userName').value,
+            userRole: document.getElementById('userRole').value,
+            userPhone: document.getElementById('userPhone').value,
+        };
+        userClass.saveUser(formData);
+    });
 </script>
 </body>
 </html>
