--- a/entry/src/main/resources/rawfile/login.html
+++ b/entry/src/main/resources/rawfile/login.html
@@ -17,7 +17,7 @@
         </div>
         <!-- 登录表单 -->
         <form id="login" class="form" onsubmit="handleLogin(event)">
-            <input type="text" id="userAccount" name="userAccount" placeholder="请输入用户名" required>
+            <input type="text" id="userPhone" name="userPhone" placeholder="请输入手机号" required>
             <input type="password" id="userPassword" name="userPassword" placeholder="请输入密码" required>
             <button type="submit" class="login-button">登录</button>
             <div class="links">
@@ -27,9 +27,29 @@
         </form>
         <!-- 注册表单 -->
         <form id="register" class="form" style="display: none;" onsubmit="handleRegister(event)">
-            <input type="text" id="registerAccount" name="registerAccount" placeholder="请输入用户名" required>
+            <input type="text" id="registerPhone" name="registerPhone" placeholder="请输入手机号" required>
             <input type="password" id="registerPassword" name="registerPassword" placeholder="请输入密码" required>
             <input type="password" id="checkPassword" name="checkPassword" placeholder="请确认密码" required>
+
+            <div class="form-group" style="display: flex; gap: 1px;">
+                <div style="width:25%">
+                    <label for="buildingNumber">楼号:</label>
+                    <input style="" type="text" id="buildingNumber" name="buildingNumber" required>
+                </div>
+                <div style="width:25%">
+                    <label for="unitNumber">单元号:</label>
+                    <input type="text" id="unitNumber" name="unitNumber" required>
+                </div>
+                <div style="width:25%">
+                    <label for="floorNumber">楼层:</label>
+                    <input type="text" id="floorNumber" name="floorNumber" required>
+                </div>
+                <div style="width:25%">
+                    <label for="roomNumber">房间号:</label>
+                    <input type="text" id="roomNumber" name="roomNumber" required>
+                </div>
+            </div>
+
             <button type="submit" class="login-button">注册</button>
             <div class="links">
                 <a href="#">已有账号？立即登录</a>
